--- a/src/app/styles/reset.css
+++ b/src/app/styles/reset.css
@@ -29,7 +29,7 @@ html {
     font-size: 15px;
     scroll-behavior: smooth;
 
-    background: #000;
+    background: var(--background);
 
     color: var(--color-text);
 }
@@ -42,7 +42,7 @@ html::-webkit-scrollbar {
 
 html::-webkit-scrollbar-thumb {
     border-radius: 18px;
-    box-shadow: inset 0 0 3rem #F6DAB2;
+    box-shadow: inset 0 0 3rem var(--color-element);
     width: 10px;
 }
 
