--- a/src/fuaters/LinkBlock/link_block.module.css
+++ b/src/fuaters/LinkBlock/link_block.module.css
@@ -1,22 +1,30 @@
 .wrap {
     width: 23vw;
     height: 30vw;
-    border: 2px solid color-mix(in srgb, var(--element-color) 60%, transparent);
-    border-radius: 20px;
     padding: 5px;
+
+    border: 2px solid color-mix(in srgb, var(--color-element) 60%, transparent);
+    border-radius: 20px;
+
     overflow: hidden;
+
+    transition: var(--hover);
+}
+.wrap:hover {
+    background-color: var(--color-block-hover);
 }
 
 .title {
     text-align: center;
     margin: 10px 0;
+    font: 400 2rem/1.2 var(--font-title);
 }
 
 .img {
     display: block;
     width: 100%;
     height: 100%;
-    transition: all 0.2s linear;
+    transition: var(--hover);
 }
 
 .img_block {
